# LED-Strip-Controller-Tauri-App

./: .gitignore  .mega-linter.yaml  .release-please-config.json  CHANGELOG.md  README.md  bun.nix  default.nix  eslint.config.js  flake.nix  package-lock.json  package.json  release-please-config.json  update-hash.sh  vite.config.ts
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yaml
.github/scripts/: update-node-hash.sh  update-versions.py
.github/workflows/: continuous-build.yaml  dependabot.yaml  mega-linter.yaml  nix-build.yaml  nix-continuous-build.yaml  nix-dependabot.yaml  nix-flake-checks.yaml  publish.yaml  release-lock-updater.yaml  release-please-hash-updater.yaml  release-please.yaml  release-updater.yaml  update-locks.yaml
docs/: INITIAL_CONCEPTS.md  NIX.md
nix/pkgs/led-strip-controller-tauri/: deps.nix
src/: App.css  App.tsx  example.ts  main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  communications.rs  communicator.rs  device.rs  lib.rs  main.rs  tauri_commands.rs
src-tauri/src/communications/: comms_protocol.rs  types.rs
src-tauri/src/communicator/: error.rs  serial_communicator.rs  tcp_communicator.rs
src-tauri/src/device/: channel.rs  error.rs  information.rs  memory.rs  sensors.rs  types.rs
src/components/: channel_picker.tsx
src/layouts/: control_navbar.tsx  index.tsx  navbar.tsx
src/pages/: about.tsx  home.tsx  settings.tsx
src/pages/configuration/: serial.tsx  (+2 more)
src/services/: invoke_commands.ts  notifications.ts
src/types/: colours.ts  modes.ts  system_specifications.ts
(+10 files in other folders)
